
1. fix to SourceLocator for the case where there are no actual
     paths in the soot classpath. (plam)
2. fix to HashMutableDirectedGraph to remove wayward extra
     preds and succs edges to a removed node. (Felix Kwok, wkwok)
3. fix for Windows classpaths which contain less than two letters.
     Formerly, this crashed in charAt(1).  (plam, reported by Mary Payne)

Improvements in version 1.2.2 (Thu Mar 29 11:45:13 EST 2001)

1. added \t case for soot.util.StringTools.getQuotedStringOf.
    (reported by Thomas VanDrunen)
2. CFG.java is improved to handle nested JSR/RETs
3. improved some exception message reported by Olivier Zendra.
4. The Jasmin package is also updated to 1.06-s10, the bug in grammer
   for attributes is fixed.
5. replaced 'getNodes().contains()' by 'containsNode()' in 
   "jimple/toolkits/invoke/MethodCallGraph.java", which speeds up
   the call graph construction significantly (by John Jorgensen.)

Improvements in version 1.2.1 (Fri Jan 12 15:22:59 EST 2001)

1. permissions changes and fix to Baf/JasminClass for BooleanType.
2. removal of a UnitGraph hack that shouldn't have been there.
3. internal changes to cmdline parsing, watch for bigger changes coming
4. fix by patrice to work around stupid jar bug
5. minor changes to jar bug workaround
6. fix for grimp precedence
7. improved error messages in the event of missing .dat files.
8. new build system (via the SootCompiler class).


Improvements in version 1.2.0 (Thu Sep 28 21:41:16 EDT 2000)

1. An annotation framework is included in this release.
2. A clean implementation of VTA is finally included in Soot.
3. New implementation of typing system included
     - contains nice integer typing system.
4. HashChain has a fast 'contains' method.
     (this was announced on the soot mailing list)
5. A branched flow analysis framework is present.
     - This allows different results to be propagated on
        different edges of a branch.