@@ -45,4 +45,18 @@ class LineNumberTable_attribute extends attribute_info {
     * @see line_number_table_entry
     */
    public line_number_table_entry line_number_table[];
+
+    public String toString()
+    {
+	String sv = "LineNumberTable : " + line_number_table_length + "\n";
+	for (int i=0; i<line_number_table_length; i++)
+	{
+	    sv += "LineNumber("+line_number_table[i].start_pc
+		+":"+line_number_table[i].start_inst+","
+		+ line_number_table[i].line_number +")";
+	    sv += "\n";
+	}
+
+	return sv;
+    }
 }
