@@ -38,8 +38,10 @@ import java.io.*;
  * @author Clark Verbrugge
  */
 class line_number_table_entry {
-   /** Offset within bytecode of the start of the code for this line number. */
-   public int start_pc;
-   /** Line number within the source code. */
-   public int line_number;
+    /** Offset within bytecode of the start of the code for this line number. */
+    public int start_pc;
+    /** Line number within the source code. */
+    public int line_number;
+    /** Start instruction corresponding to start_pc */
+    public Instruction start_inst;
 }
