@@ -57,75 +57,13 @@ import java.io.*;
  .code_attribute ArrayCheckAttribute "%label2%Aw==%label3%Ag==%label4%Ag=="
 
 </pre>
- *
+ * 
  */
 
 
 public abstract class JasminAttribute implements Attribute
 {
-    public static byte[] decode(String attr, Hashtable labelToPc)
-    {
-	if (soot.Main.isVerbose)
-	    System.out.println("[] JasminAttribute decode...");
-
-	List attributeHunks = new LinkedList();
-	int attributeSize = 0;
-
-	StringTokenizer st = new StringTokenizer(attr, "%");
-	boolean isLabel = false;
-	if(attr.startsWith("%"))
-	    isLabel = true;
-
-	byte[] pcArray;
-	while(st.hasMoreTokens()) {	    
-	    String token = st.nextToken();
-	    if(isLabel) {		
-		Integer pc = (Integer) labelToPc.get(token);
-
-		if(pc == null)
-		    throw new RuntimeException("PC is null, the token is "+token);
-
-		int pcvalue = pc.intValue();
-		if(pcvalue > 65535) 
-		    throw new RuntimeException("PC great than 65535, the token is "+token+" : " +pcvalue);
-
-		pcArray = new byte[2];
-
-		pcArray[1] = (byte)(pcvalue&0x0FF);
-				
-		pcArray[0] = (byte)((pcvalue>>8)&0x0FF);
-
-		attributeHunks.add(pcArray);
-		attributeSize += 2;
-	    } else {
-
-		byte[] hunk = Base64.decode(token.toCharArray());		
-		attributeSize += hunk.length;
-
-		attributeHunks.add(hunk);
-	    }
-	    isLabel = !isLabel;	  
-	}
-	
-	int index = 0;
-	byte[] attributeValue = new byte[attributeSize];
-
-	Iterator it = attributeHunks.iterator();
-	while(it.hasNext()) {
-	    byte[] hunk = (byte[]) it.next();
-	    for(int i = 0; i < hunk.length; i++) {
-		attributeValue[index++] = hunk[i];
-	    }
-	}
-
-	if(index != (attributeSize))
-	    throw new RuntimeException("Index does not euqal to attrubute size :"+index+" -- "+attributeSize);
-
-	if (soot.Main.isVerbose)
-	    System.out.println("[] Jasmin.decode finished...");
-
-	return attributeValue;
-    }
+    abstract public byte[] decode(String attr, Hashtable labelToPc);
     
     abstract public String getJasminValue(Map instToLabel);
 }
